Defining the bandit

--- a/multi-armed-bandit.ipynb
+++ b/multi-armed-bandit.ipynb
@@ -27,23 +27,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### n-armed bandit"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "bandits = [0.2, 0, -0.2, -5]\n",
+    "num_bandits = len(bandits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "def pull_bandit(bandit):\n",
+    "    \"\"\"\n",
+    "    Pull a bandit.\n",
+    "    \n",
+    "    Generates a random number from a normal\n",
+    "    distribution with mean of 0.\n",
+    "    \n",
+    "    :param bandit: float\n",
+    "        The bandit to be pulled.\n",
+    "    \n",
+    "    :return reward: int\n",
+    "        The reward for pulling a bandit.\n",
+    "        The lower the bandit the more likely it\n",
+    "        is for a positive reward.\n",
+    "    \"\"\"\n",
+    "    reward = 1 if np.random.randn(1) > bandit else -1\n",
+    "    return reward"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Agent"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tf.reset_default_graph()\n",
+    "\n",
+    "# Weights: contains the value that estimates how good a \n",
+    "#          choosen (pulled) bandit is.\n",
+    "# Action:  is the action that gives the maximum \n",
+    "#          weight value\n",
+    "weights = tf.Variable(tf.random_normal(shape=[num_bandits]))\n",
+    "choosen_action = np.argmax(weights, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
