Multi armed bandit model

--- a/multi-armed-bandit.ipynb
+++ b/multi-armed-bandit.ipynb
@@ -85,11 +85,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Weights: <tf.Variable 'Variable:0' shape=(4,) dtype=float32_ref>\n",
+      "R weights: Tensor(\"Slice:0\", shape=(1,), dtype=float32)\n"
+     ]
+    }
+   ],
    "source": [
     "tf.reset_default_graph()\n",
     "\n",
@@ -97,18 +106,30 @@
     "#          choosen (pulled) bandit is.\n",
     "# Action:  is the action that gives the maximum \n",
     "#          weight value\n",
-    "weights = tf.Variable(tf.random_normal(shape=[num_bandits]))\n",
-    "choosen_action = np.argmax(weights, axis=1)"
+    "weights = tf.Variable(tf.ones(shape=[num_bandits]))\n",
+    "choosen_action = np.argmax(weights, axis=0)\n",
+    "\n",
+    "# Reward: reward from pulling a bandit/lever\n",
+    "# Action: the action that lead to the reward\n",
+    "reward_placeholder = tf.placeholder(tf.float32, shape=[1])\n",
+    "action_placeholder = tf.placeholder(tf.int32, shape=[1])\n",
+    "\n",
+    "responsible_weight = tf.slice(weights, action_placeholder, [1])\n",
+    "print('Weights:', weights)\n",
+    "print('R weights:', responsible_weight)\n",
+    "# loss = -log(π) * A\n",
+    "loss = -tf.log(responsible_weight) * reward_placeholder\n",
+    "\n",
+    "optimizer = tf.train.GradientDescentOptimizer(learning_rate=1e-3)\n",
+    "train = optimizer.minimize(loss)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training the Agent"
+   ]
   },
   {
    "cell_type": "code",
