Responsible weights: Action slice of weight

--- a/multi-armed-bandit.ipynb
+++ b/multi-armed-bandit.ipynb
@@ -28,7 +28,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### n-armed bandit"
    ]
@@ -78,7 +81,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## The Agent"
    ]
@@ -87,7 +93,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -113,10 +121,9 @@
     "# Action: the action that lead to the reward\n",
     "reward_placeholder = tf.placeholder(tf.float32, shape=[1])\n",
     "action_placeholder = tf.placeholder(tf.int32, shape=[1])\n",
-    "\n",
+    "# action slice from the weight\n",
     "responsible_weight = tf.slice(weights, action_placeholder, [1])\n",
-    "print('Weights:', weights)\n",
-    "print('R weights:', responsible_weight)\n",
+    "\n",
     "# loss = -log(π) * A\n",
     "loss = -tf.log(responsible_weight) * reward_placeholder\n",
     "\n",
@@ -126,7 +133,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Training the Agent"
    ]
@@ -135,7 +145,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
