Training the bandit agent

--- a/multi-armed-bandit.ipynb
+++ b/multi-armed-bandit.ipynb
@@ -91,22 +91,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Weights: <tf.Variable 'Variable:0' shape=(4,) dtype=float32_ref>\n",
-      "R weights: Tensor(\"Slice:0\", shape=(1,), dtype=float32)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tf.reset_default_graph()\n",
     "\n",
@@ -115,7 +106,7 @@
     "# Action:  is the action that gives the maximum \n",
     "#          weight value\n",
     "weights = tf.Variable(tf.ones(shape=[num_bandits]))\n",
-    "choosen_action = np.argmax(weights, axis=0)\n",
+    "choosen_action = tf.argmax(weights, axis=0)\n",
     "\n",
     "# Reward: reward from pulling a bandit/lever\n",
     "# Action: the action that lead to the reward\n",
@@ -133,21 +124,127 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training the Agent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tensorflow's `Session`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sess = tf.Session()\n",
+    "init = tf.global_variables_initializer()\n",
+    "sess.run(init)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
    },
    "source": [
-    "## Training the Agent"
+    "### Hyperparameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "episodes = 1000\n",
+    "log_interval = 100\n",
+    "rewards = np.zeros(shape=num_bandits)\n",
+    "e = 0.7  # Epsilon:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* - random action\n",
+      "0: Bandit 0 looks good\tRewards: [-1.  0.  0.  0.]\n",
+      "100: Bandit 0 looks good\tRewards: [ -3.   1.  -2.  75.]*\n",
+      "200: Bandit 3 looks good\tRewards: [  -4.    5.    1.  155.]\n",
+      "300: Bandit 3 looks good\tRewards: [  -3.    4.    5.  239.]\n",
+      "400: Bandit 3 looks good\tRewards: [  -1.    6.    5.  323.]\n",
+      "500: Bandit 3 looks good\tRewards: [  -4.    9.    2.  404.]\n",
+      "600: Bandit 3 looks good\tRewards: [  -5.    8.    7.  487.]\n",
+      "700: Bandit 3 looks good\tRewards: [  -6.   11.    9.  565.]\n",
+      "800: Bandit 0 looks good\tRewards: [ -11.   13.   16.  647.]*\n",
+      "900: Bandit 3 looks good\tRewards: [ -14.   13.   13.  731.]\n",
+      "\n",
+      "Agent says bandit 3 is the best...\n",
+      "...and it was right!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('* - random action')\n",
+    "\n",
+    "for i in range(episodes):\n",
+    "    # Explore or Exploit\n",
+    "    if np.random.randn(1) > e:\n",
+    "        action = np.random.randint(num_bandits)\n",
+    "        is_random = True\n",
+    "    else:\n",
+    "        action = sess.run(choosen_action)\n",
+    "        is_random = False\n",
+    "    # Reward from taking that action\n",
+    "    reward = pull_bandit(bandits[action])\n",
+    "    # Train the net\n",
+    "    _, _weight = sess.run([train, weights], \n",
+    "                          feed_dict={reward_placeholder:[reward],\n",
+    "                                     action_placeholder:[action]})\n",
+    "    rewards[action] += reward\n",
+    "    # Logging\n",
+    "    if i % log_interval == 0:\n",
+    "        rand_msg = '*' if is_random else ''\n",
+    "        print(f'{i}: Bandit {action} looks good\\tRewards: {rewards}{rand_msg}')\n",
+    "    if i+1 == episodes:\n",
+    "        print(f'\\nAgent says bandit {action} is the best...')\n",
+    "        if np.argmax(_weight) == np.argmax(-np.array(bandits)):\n",
+    "            print(f'...and it was right!')\n",
+    "        else:\n",
+    "            print(f'...and it was wrong!')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": []
